--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "unlembilisim/orgenus",
+    "name": "unlembilisim/bulut",
     "description": "Bulut",
     "homepage": "http://unlembilisim.com/",
     "keywords": ["efatura", "edefter", "edönüşüm"],
