--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
-    },
-    "require-dev": {
+        "php": ">=5.4.0",
         "sabre/xml": "1.*"
     },
     "autoload": {
